force-app/main/default/objects/Truck_Dockets__c/Truck_Dockets__c.object-meta.xml
<CustomObject>
    <label>Schedular</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Job #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Schedular</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>