force-app/main/default/objects/Truck_Dockets__c/fields/Asset__c.field-meta.xml
<CustomField>
    <fullName>Asset__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Asset  #</label>
    <referenceTo>Asset__c</referenceTo>
    <relationshipName>Truck_Data</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>