force-app/main/default/objects/Truck_Dockets__c/fields/Configuration__c.field-meta.xml
<CustomField>
    <fullName>Configuration__c</fullName>
    <label>Configuration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Bed Truck + 2 Trailers</fullName>
            </value>
            <value>
                <fullName>Bed Truck + Trailer</fullName>
            </value>
            <value>
                <fullName>Bed Truck 30T</fullName>
            </value>
            <value>
                <fullName>Bed Truck 50T</fullName>
            </value>
            <value>
                <fullName>Double Road Train</fullName>
            </value>
            <value>
                <fullName>Escort Vehicle</fullName>
            </value>
            <value>
                <fullName>Float</fullName>
            </value>
            <value>
                <fullName>Float + Dolly</fullName>
            </value>
            <value>
                <fullName>Fridge Van</fullName>
            </value>
            <value>
                <fullName>Hot Shot</fullName>
            </value>
            <value>
                <fullName>Loader</fullName>
            </value>
            <value>
                <fullName>Prime Mover</fullName>
                <default>true</default>
                <label>Prime Mover</label>
            </value>
            <value>
                <fullName>Prime Mover &amp; Dolly</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>Triple Road Train</fullName>
            </value>
            <value>
                <fullName>Water Tanker</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>