force-app/main/default/objects/Truck_Dockets__c/fields/DR__c.field-meta.xml
<CustomField>
    <fullName>DR__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job Order #</label>
    <referenceTo>WD_Report__c</referenceTo>
    <relationshipName>Truck_Dockets</relationshipName>
    <type>Lookup</type>
</CustomField>