force-app/main/default/objects/Truck_Dockets__c/fields/Driver__c.field-meta.xml
<CustomField>
    <fullName>Driver__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Driver who is responsible for carrying out the job</inlineHelpText>
    <label>Driver</label>
    <referenceTo>Employees__c</referenceTo>
    <relationshipLabel>Schedular</relationshipLabel>
    <relationshipName>Truck_Data</relationshipName>
    <type>Lookup</type>
</CustomField>