force-app/main/default/objects/Truck_Dockets__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <inlineHelpText>End Date of this particular Unit</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>