force-app/main/default/objects/Truck_Dockets__c/fields/Fuel_Required__c.field-meta.xml
<CustomField>
    <fullName>Fuel_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Fuel was taken on the date of Trucking Docket</inlineHelpText>
    <label>Fuel Required</label>
    <type>Checkbox</type>
</CustomField>