force-app/main/default/objects/Truck_Dockets__c/fields/Inv__c.field-meta.xml
<CustomField>
    <fullName>Inv__c</fullName>
    <label>Inv#</label>
    <length>18</length>
    <type>Text</type>
</CustomField>