force-app/main/default/objects/Truck_Dockets__c/fields/Invoice_By__c.field-meta.xml
<CustomField>
    <fullName>Invoice_By__c</fullName>
    <label>Invoice By</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hourly</fullName>
            </value>
            <value>
                <fullName>Quote/Lump Sum</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>