force-app/main/default/objects/Truck_Dockets__c/fields/Invoicing_Information__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Information__c</fullName>
    <label>Invoicing Information</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Idle</fullName>
                <default>true</default>
                <label>Idle</label>
            </value>
            <value>
                <fullName>Hrly Rate-TD Required</fullName>
            </value>
            <value>
                <fullName>Lump Sum (Rig Inclusive)</fullName>
            </value>
            <value>
                <fullName>Quoted Price</fullName>
            </value>
            <value>
                <fullName>WD Internal</fullName>
            </value>
            <value>
                <fullName>Klm Rate-TD Required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>