force-app/main/default/objects/Truck_Dockets__c/fields/Job_description__c.field-meta.xml
<CustomField>
    <fullName>Job_description__c</fullName>
    <label>Job Description</label>
    <type>TextArea</type>
</CustomField>