force-app/main/default/objects/Truck_Dockets__c/fields/Litres__c.field-meta.xml
<CustomField>
    <fullName>Litres__c</fullName>
    <inlineHelpText>Number of litres put into truck</inlineHelpText>
    <label>Litres</label>
    <length>10</length>
    <type>Text</type>
</CustomField>