force-app/main/default/objects/Truck_Dockets__c/fields/Location_Fuelled_Up__c.field-meta.xml
<CustomField>
    <fullName>Location_Fuelled_Up__c</fullName>
    <inlineHelpText>Place and Depot fuelled up</inlineHelpText>
    <label>Location Fuelled Up</label>
    <length>30</length>
    <type>Text</type>
</CustomField>