force-app/main/default/objects/Truck_Dockets__c/fields/Odemeter_as_Prestart__c.field-meta.xml
<CustomField>
    <fullName>Odemeter_as_Prestart__c</fullName>
    <inlineHelpText>Odometer at start of day as per Prestart.</inlineHelpText>
    <label>Odometer as Prestart</label>
    <length>10</length>
    <type>Text</type>
</CustomField>