force-app/main/default/objects/Truck_Dockets__c/fields/Prestart__c.field-meta.xml
<CustomField>
    <fullName>Prestart__c</fullName>
    <label>Prestart #</label>
    <length>10</length>
    <type>Text</type>
</CustomField>