force-app/main/default/objects/Truck_Dockets__c/fields/Prestart_Received__c.field-meta.xml
<CustomField>
    <fullName>Prestart_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Prestart Received</label>
    <type>Checkbox</type>
</CustomField>