force-app/main/default/objects/Truck_Dockets__c/fields/Prestart_Required__c.field-meta.xml
<CustomField>
    <fullName>Prestart_Required__c</fullName>
    <label>Prestart Required</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>