force-app/main/default/objects/Truck_Dockets__c/fields/Standby__c.field-meta.xml
<CustomField>
    <fullName>Standby__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standby</label>
    <type>Checkbox</type>
</CustomField>