force-app/main/default/objects/Truck_Dockets__c/fields/Standby_Hrs__c.field-meta.xml
<CustomField>
    <fullName>Standby_Hrs__c</fullName>
    <label>Standby Hrs</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>