force-app/main/default/objects/Truck_Dockets__c/fields/TD__c.field-meta.xml
<CustomField>
    <fullName>TD__c</fullName>
    <label>TD #</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>