force-app/main/default/objects/Truck_Dockets__c/fields/To_Location__c.field-meta.xml
<CustomField>
    <fullName>To_Location__c</fullName>
    <label>To Location</label>
    <length>30</length>
    <type>Text</type>
</CustomField>