force-app/main/default/objects/Truck_Dockets__c/fields/Total_Hours__c.field-meta.xml
<CustomField>
    <fullName>Total_Hours__c</fullName>
    <label>Total Hours</label>
    <length>10</length>
    <type>Text</type>
</CustomField>