force-app/main/default/objects/Truck_Dockets__c/fields/Total_Hrs_Operating__c.field-meta.xml
<CustomField>
    <fullName>Total_Hrs_Operating__c</fullName>
    <label>Operating Hrs</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>