force-app/main/default/objects/Truck_Dockets__c/fields/Trucking_Dockets_Received__c.field-meta.xml
<CustomField>
    <fullName>Trucking_Dockets_Received__c</fullName>
    <defaultValue>false</defaultValue>
    <description>To be ticked once all required trucking dockets have been received at Roma Base</description>
    <inlineHelpText>Tick to indicate that all required trucking dockets have been received at Roma Base</inlineHelpText>
    <label>TD Received</label>
    <type>Checkbox</type>
</CustomField>