force-app/main/default/objects/Truck_Dockets__c/fields/WD_SO__c.field-meta.xml
<CustomField>
    <fullName>WD_SO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WD SO #</label>
    <referenceTo>Job_Orders__c</referenceTo>
    <relationshipName>Truck_Dockets</relationshipName>
    <type>Lookup</type>
</CustomField>