force-app/main/default/objects/Truck_Dockets__c/fields/WD_Unit__c.field-meta.xml
<CustomField>
    <fullName>WD_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WD Unit</label>
    <referenceTo>Unit__c</referenceTo>
    <relationshipLabel>Schedular</relationshipLabel>
    <relationshipName>Schedular</relationshipName>
    <type>Lookup</type>
</CustomField>