force-app/main/default/objects/Truck_Dockets__c/listViews/all_nhvas_Month.listView-meta.xml
<ListView>
    <fullName>all_nhvas_Month</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Asset__c</columns>
    <columns>Job_description__c</columns>
    <columns>Prestart_Required__c</columns>
    <columns>Prestart_Received__c</columns>
    <columns>Prestart__c</columns>
    <columns>Odemeter_as_Prestart__c</columns>
    <columns>Fault_Reported__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>5/5/2016</value>
    </filters>
    <filters>
        <field>Prestart_Required__c</field>
        <operation>equals</operation>
        <value>Yes</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>greaterThan</operation>
        <value>5/1/2016</value>
    </filters>
    <filters>
        <field>Date__c</field>
        <operation>lessOrEqual</operation>
        <value>5/31/2016</value>
    </filters>
    <filters>
        <field>Prestart_Received__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All - NHVAS Info Month</label>
    <sharedTo>
        <group>Safety</group>
        <group>Transport</group>
    </sharedTo>
</ListView>