force-app/main/default/objects/Truck_Dockets__c/listViews/all_times.listView-meta.xml
<ListView>
    <fullName>all_times</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Asset__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Job_description__c</columns>
    <columns>Configuration__c</columns>
    <columns>Standby__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Finish_Time__c</columns>
    <columns>Total_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>5/5/2016</value>
    </filters>
    <filters>
        <field>Invoicing_Information__c</field>
        <operation>equals</operation>
        <value>Lump Sum,Hrly Rate,Quoted,Klm Rate,WD Internal</value>
    </filters>
    <label>All - Times/Hrs</label>
    <sharedTo>
        <group>Safety</group>
        <group>Transport</group>
    </sharedTo>
</ListView>