force-app/main/default/objects/Truck_Dockets__c/listViews/Todays.listView-meta.xml
<ListView>
    <fullName>Todays</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Driver__c</columns>
    <columns>Asset__c</columns>
    <columns>Job_description__c</columns>
    <columns>Details_Comments__c</columns>
    <columns>WD_SO__c</columns>
    <columns>Prestart__c</columns>
    <columns>Odemeter_as_Prestart__c</columns>
    <columns>Prestart_Required__c</columns>
    <columns>Start_Time__c</columns>
    <columns>Finish_Time__c</columns>
    <columns>Total_Hrs_Operating__c</columns>
    <columns>Standby_Hrs__c</columns>
    <columns>Total_Hours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>All - Today</label>
    <sharedTo>
        <group>Safety</group>
        <group>Transport</group>
    </sharedTo>
</ListView>