force-app/main/default/objects/Truck_Dockets__c/listViews/Todays_RS.listView-meta.xml
<ListView>
    <fullName>Todays_RS</fullName>
    <columns>NAME</columns>
    <columns>Date__c</columns>
    <columns>Driver__c</columns>
    <columns>Asset__c</columns>
    <columns>WD_Unit__c</columns>
    <columns>Job_description__c</columns>
    <columns>Details_Comments__c</columns>
    <columns>Prestart__c</columns>
    <columns>TD__c</columns>
    <columns>Invoicing_Information__c</columns>
    <columns>WD_SO__c</columns>
    <columns>Inv__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Todays - RS</label>
    <sharedTo>
        <group>Transport</group>
    </sharedTo>
</ListView>