force-app/main/default/objects/Truck_Dockets__c/listViews/U02.listView-meta.xml
<ListView>
    <fullName>U02</fullName>
    <columns>Asset__c</columns>
    <columns>Date__c</columns>
    <columns>Driver__c</columns>
    <columns>Job_description__c</columns>
    <columns>Prestart_Required__c</columns>
    <columns>Prestart__c</columns>
    <columns>Prestart_Received__c</columns>
    <columns>Trucking_Dockets_Received__c</columns>
    <columns>Inv__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Date__c</field>
        <operation>greaterThan</operation>
        <value>5/3/2016</value>
    </filters>
    <filters>
        <field>Asset__c</field>
        <operation>equals</operation>
        <value>U02 Mack Titan</value>
    </filters>
    <label>U02</label>
    <sharedTo>
        <group>Transport</group>
    </sharedTo>
</ListView>